move django messages to the top of the page so they are more visible (needs to be styled/themed better at some point) [Fixes #26014357]

--- a/sitemedia/css/structure.css
+++ b/sitemedia/css/structure.css
@@ -1581,7 +1581,10 @@ span.required {
 	position: absolute;
 	width: 370px;
 }
-	
+
+div.messages {
+    margin: 10px auto 0px 15px;
+}	
 
 #messages, .message {
   margin: 5px;
